# gha-logs-miner

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs  util.rs
