[package]
name = "gha-logs-miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = { version = "0.4.19", features = ["serde"] }
itertools = "0.10.1"
rayon = "1.5.3"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
