[package]
name = "gha-logs-miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
dotenv = "0.15.0"
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
chrono = { version = "0.4.19", features = ["serde"] }
itertools = "0.10.1"
rayon = "1.5.3"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
regex = "1.5.5"
zip = "0.6.2"
clap = { version = "4.0.2", features = ["env", "derive"] }